--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   firebase_core: ^0.5.0
   firebase_database: ^4.0.0
   http: ^0.12.2
+  shared_preferences: ^0.5.12
 
 dev_dependencies:
   flutter_test:
